--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node vercel-build.js",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "create-admin": "node -r dotenv/config src/scripts/create-admin.js",
