--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.3",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "html5-qrcode": "^2.3.8",
